<resources>
    <string name="app_name">TestChat-2</string>
    <string name="login_title">Chat d\'aide</string>
    <string name="login_pseudo">Pseudo</string>
    <string name="login_connexion">Connexion</string>
    <string name="chat_hint">Tapez votre message</string>
    <string name="chat_content_img">Envoyer une image</string>
    <string name="chat_content_send">Envoyer un message</string>
    <string name="image">image</string>
    <string name="menu_deconnexion">Déconnexion</string>
</resources>
