<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ttraxxfull.testchat_2.ChatActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:minHeight="?android:attr/actionBarSize">


    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/llActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/llActions"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/imageLoader"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/imageButton"
                android:contentDescription="@string/chat_content_img"
                android:src="@drawable/img_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="0dp"
                android:hint="@string/chat_hint"
                android:imeOptions="actionDone"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/sendButton"
                android:contentDescription="@string/chat_content_send"
                android:src="@drawable/img_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</android.widget.RelativeLayout>
